--- a/package.json
+++ b/package.json
@@ -1,16 +1,17 @@
 {
-  "name": "vite-project",
-  "private": true,
-  "version": "0.0.1",
-  "type": "module",
-  "scripts": {
-    "dev": "vite",
-    "build": "tsc && vite build",
-    "preview": "vite preview"
-  },
-  "devDependencies": {
-    "prettier": "^3.2.4",
-    "typescript": "^5.2.2",
-    "vite": "^5.0.8"
-  }
+    "name": "vite-project",
+    "private": true,
+    "version": "0.0.1",
+    "type": "module",
+    "scripts": {
+        "dev": "vite",
+        "build": "tsc && vite build",
+        "preview": "vite preview",
+        "lint:fix": "prettier . --write"
+    },
+    "devDependencies": {
+        "prettier": "^3.2.4",
+        "typescript": "^5.2.2",
+        "vite": "^5.0.8"
+    }
 }
