--- a/package.json
+++ b/package.json
@@ -7,11 +7,22 @@
         "dev": "vite",
         "build": "tsc && vite build",
         "preview": "vite preview",
+        "test": "jest",
         "lint:fix": "prettier . --write"
     },
     "devDependencies": {
+        "@babel/core": "^7.23.9",
+        "@babel/preset-env": "^7.23.9",
+        "@babel/preset-typescript": "^7.23.3",
+        "@types/jest": "^29.5.11",
+        "@types/seedrandom": "^3.0.8",
+        "babel-jest": "^29.7.0",
+        "jest": "^29.7.0",
         "prettier": "^3.2.4",
         "typescript": "^5.2.2",
         "vite": "^5.0.8"
+    },
+    "dependencies": {
+        "seedrandom": "^3.0.5"
     }
 }
