--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
         "build": "tsc && vite build",
         "preview": "vite preview",
         "test": "jest",
-        "lint:fix": "prettier . --write"
+        "lint": "eslint \"./**/*.{js,ts,tsx}\"",
+        "lint:fix": "prettier . --write && npm run lint --fix"
     },
     "devDependencies": {
         "@babel/core": "^7.23.9",
@@ -16,7 +17,10 @@
         "@babel/preset-typescript": "^7.23.3",
         "@types/jest": "^29.5.11",
         "@types/seedrandom": "^3.0.8",
+        "@typescript-eslint/eslint-plugin": "^6.20.0",
+        "@typescript-eslint/parser": "^6.20.0",
         "babel-jest": "^29.7.0",
+        "eslint": "^8.56.0",
         "jest": "^29.7.0",
         "prettier": "^3.2.4",
         "typescript": "^5.2.2",
